Bug 1773783 - Fix recipients line height for mixed characters and imip bar buttons spacing. r=Paenglab
Differential Revision: https://phabricator.services.mozilla.com/D148960

--HG--
extra : moz-landing-system : lando

--- a/calendar/base/themes/common/calendar.css
+++ b/calendar/base/themes/common/calendar.css
@@ -146,6 +146,12 @@
   border-radius: var(--toolbarbutton-border-radius);
 }
 
+#imip-view-toolbar > .toolbarbutton-1.message-header-view-button {
+  -moz-context-properties: fill;
+  fill: currentColor;
+  margin-inline-start: 6px;
+}
+
 #imip-view-toolbar > .toolbarbutton-1.message-header-view-button,
 #imip-view-toolbar > .toolbarbutton-1.message-header-view-button > .toolbarbutton-menubutton-button,
 #imip-view-toolbar > .toolbarbutton-1.message-header-view-button > .toolbarbutton-menubutton-dropmarker {
