--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -451,6 +451,7 @@ button.email-action-button:focus-visible {
   user-select: text;
   word-wrap: anywhere;
   display: inherit;
+  line-height: 1.3;
 }
 
 .screen-reader-only {
